--- a/styles/sections/_contact.scss
+++ b/styles/sections/_contact.scss
@@ -15,6 +15,7 @@
     @media (min-width: 750px) {
       font-size: 1.5rem;
       width: 45%;
+      text-align: left;
     }
   }
 
